# Aura-CL

./: .GENERATE WINDOWS BUILD FILES.BAT  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  Debug_copy.bat  Makefile  README.md  cmake_install.cmake  current_version.h
.github/workflows/: CI.yml  build.yml
cl_dll/: CMakeLists.txt  Exports.h  GameStudioModelRenderer.cpp  GameStudioModelRenderer.h  Makefile  StudioModelRenderer.cpp  StudioModelRenderer.h  achievement_manager.cpp  achievement_manager.h  ammo.cpp  ammo.h  ammohistory.cpp  battery.cpp  blur.cpp  blur.h  camera.h  cdll_int.cpp  cl_dll.h  cl_util.h  cl_weapons.h  client_steam_context.cpp  client_steam_context.h  client_vgui.cpp  client_vgui.h  client_viewport.cpp  client_viewport.h  cmake_install.cmake  com_weapons.h  console.cpp  console.h  death.cpp  demo.h  discord_integration.cpp  ehandle.cpp  engineclientcmd.h  entity.cpp  ev_common.cpp  ev_hldm.cpp  ev_hldm.h  eventscripts.h  (+87 more)
cl_dll/audio/: CMakeLists.txt  openal_wav.cpp  openal_wav.h
cl_dll/gameui/: CCreateWorkshopInfoBox.cpp  CCreateWorkshopInfoBox.h  CImageMenuButton.cpp  CImageMenuButton.h  CMakeLists.txt  baseviewport.cpp  baseviewport.h  client_viewport.cpp  client_viewport.h  gameui_test_panel.cpp  gameui_test_panel.h  gameui_viewport.cpp  gameui_viewport.h  vgui2_client_impl.cpp  vgui2_client_impl.h  vgui2_int.cpp  vgui2_root_viewport.cpp  vgui2_root_viewport.h
cl_dll/gameui/achievements/: AchievementList.cpp  AchievementList.h  CMakeLists.txt  C_AchievementDialog.cpp  C_AchievementDialog.h
cl_dll/gameui/composer/: CMakeLists.txt  CustomGameComposer.cpp  CustomGameComposer.h
cl_dll/gameui/filedialog/: CFileBrowser.cpp  CFileBrowser.h  CFileDialogManager.cpp  CMakeLists.txt  IFileDialogManager.h
cl_dll/gameui/leaderboard/: CMakeLists.txt  LeaderboardPanel.cpp  LeaderboardPanel.h
cl_dll/gameui/lodepng/: CMakeLists.txt  lodepng.cpp  lodepng_benchmark.cpp  lodepng_fuzzer.cpp  lodepng_unittest.cpp  lodepng_util.cpp  lodepng_util.h
cl_dll/gameui/serverbrowser/: CBaseTab.cpp  CBaseTab.h  CMakeLists.txt  CServerBrowser.cpp  CServerBrowser.h  CServerContextMenu.cpp  CServerContextMenu.h  ServerListSorter.cpp  ServerListSorter.h
cl_dll/gameui/serverbrowser/dialogs/: CDialogAddServer.cpp  CDialogAddServer.h  CDialogGameInfo.cpp  CDialogGameInfo.h  CDialogServerPassword.cpp  CDialogServerPassword.h  CVACBannedDialog.cpp  CVACBannedDialog.h
cl_dll/gameui/serverbrowser/tabs/: CTabFavorites.cpp  CTabFavorites.h  CTabFriends.cpp  CTabFriends.h  CTabHistory.cpp  CTabHistory.h  CTabInternet.cpp  CTabInternet.h  CTabLan.cpp  CTabLan.h
cl_dll/gameui/workshop/: CMakeLists.txt  CWorkshopDialog.cpp  CWorkshopDialog.h  CWorkshopSubList.cpp  CWorkshopSubList.h  CWorkshopSubUpload.cpp  CWorkshopSubUpload.h  CWorkshopSubUploaded.cpp  CWorkshopSubUploaded.h  WorkshopItemList.cpp  WorkshopItemList.h  tga_write.h
cl_dll/halo_weapons/: CMakeLists.txt  smg.cpp
cl_dll/hl/: Makefile  cmake_install.cmake  hl_baseentity.cpp  hl_events.cpp  hl_objects.cpp  hl_weapons.cpp
cl_dll/lodepng/: CMakeLists.txt  lodepng.cpp  lodepng.h
cl_dll/op4_weapons/: CDisplacer.cpp  CDisplacerBall.cpp  CEagle.cpp  CEagleLaser.cpp  CGrapple.h  CGrappleTip.cpp  CKnife.cpp  CM249.cpp  CMakeLists.txt  CPenguin.cpp  CPipewrench.cpp  CPipewrench.h  CSniperRifle.cpp  CSniperRifle.h  Makefile  cmake_install.cmake
cl_dll/vgui/: CMakeLists.txt  IViewportPanel.h  avatar_image.cpp  avatar_image.h  client_viewport.cpp  client_viewport.h  player_list_panel.cpp  player_list_panel.h  png_image.cpp  png_image.h  score_panel.cpp  score_panel.h  viewport_panel_names.h
common/: CMakeLists.txt  Makefile  cmake_install.cmake  com_model.h  const.h  convar.cpp  convar.h  interface.h  mathlib.h  r_efx.h
dlls/: CDisplacer.cpp  CDisplacer.h  CDisplacerBall.h  CEagle.cpp  CEagle.h  CElectrifiedWire.h  CGrapple.cpp  CGrapple.h  CGrappleTip.cpp  CGrappleTip.h  CKnife.cpp  CKnife.h  CM249.h  CMakeLists.txt  CPenguin.h  CPipewrench.cpp  CRope.h  CRopeSegment.h  CShockRifle.cpp  CSniperRifle.h  CSporeLauncher.cpp  UserMessages.h  basemonster.h  br.cpp  cbase.h  cdll_dll.h  client.cpp  cmake_install.cmake  combat.cpp  crossbow.cpp  crowbar.cpp  effects.h  egon.cpp  extdll.h  game.cpp  gamerules.cpp  gamerules.h  gauss.cpp  handgrenade.cpp  monsters.h  (+19 more)
dlls/wpn_shared/: CMakeLists.txt  Makefile  cmake_install.cmake  hl_wpn_glock.cpp  oitc.cpp
dmc/cl_dll/: cdll_int.cpp  cl_dll.h  hud.h  hud_iface.h  in_camera.cpp  input.cpp  inputw32.cpp
dmc/pm_shared/: pm_shared.c
engine/: APIProxy.h  cdll_int.h
game_shared/: Makefile  cmake_install.cmake  vgui_checkbutton2.cpp  vgui_checkbutton2.h  vgui_grid.cpp  vgui_helpers.cpp  vgui_listbox.cpp  vgui_loadtga.cpp  vgui_scrollbar2.cpp  vgui_scrollbar2.h  vgui_slider2.cpp  vgui_slider2.h  voice_banmgr.cpp  voice_banmgr.h  voice_status.h
linucksbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  current_version.h
linucksbuild/cl_dll/: Makefile  cmake_install.cmake
linucksbuild/cl_dll/gameui/: Makefile  cmake_install.cmake
linucksbuild/cl_dll/hl/: Makefile  cmake_install.cmake
linucksbuild/cl_dll/op4_weapons/: Makefile  cmake_install.cmake
linucksbuild/common/: Makefile  cmake_install.cmake
linucksbuild/dlls/: Makefile  cmake_install.cmake
linucksbuild/dlls/wpn_shared/: Makefile  cmake_install.cmake
linucksbuild/game_shared/: Makefile  cmake_install.cmake
linucksbuild/pm_shared/: Makefile  cmake_install.cmake
linucksbuild/public/: Makefile  cmake_install.cmake
linucksbuild/source_sdk/: Makefile  cmake_install.cmake
linucksbuild/source_sdk/tier1/: Makefile  cmake_install.cmake
linux/: libSDL2-2.0.so.0
pm_shared/: Makefile  cmake_install.cmake  pm_math.c  pm_shared.c
public/: Makefile  archtypes.h  cmake_install.cmake  gameui.h  interface.cpp  interface.h  particleman.h  pman_particlemem.h  pman_triangleffect.h
public/cl_dll/: IGameClientExports.h
public/vinterface/: interface.h
ricochet/cl_dll/: Exports.h  cdll_int.cpp  cl_dll.h  hud_iface.h  in_camera.cpp  input.cpp  inputw32.cpp
(+4 files in other folders)
