add_subdirectory(wpn_shared)

add_sources(
    CEagle.h
	CEagleLaser.h
	CM249.h
	CPipewrench.h
    CPenguin.h
	CSniperRifle.h
	cdll_dll.h
	crossbow.cpp
	crowbar.cpp
	egon.cpp
	gauss.cpp
	handgrenade.cpp
	hornetgun.cpp
	mp5.cpp
	python.cpp
	rpg.cpp
	satchel.cpp
	shotgun.cpp
	skill.h
	squeakgrenade.cpp
	tripmine.cpp
	UserMessages.h)
