add_sources(
	CCreateWorkshopInfoBox.cpp
	CCreateWorkshopInfoBox.h
	CImageMenuButton.cpp
	CImageMenuButton.h
	gameui_test_panel.cpp
	gameui_test_panel.h
	gameui_viewport.cpp
	gameui_viewport.h)
	
add_subdirectory(achievements)
add_subdirectory(composer)
add_subdirectory(filedialog)
add_subdirectory(leaderboard)
add_subdirectory(serverbrowser)
add_subdirectory(workshop)
add_subdirectory(lodepng)